2002-09-18  Havoc Pennington  <hp@pobox.com>

        Merge gconf-markup-hacking branch
	
	* tests/testbackend.c: add a test for backends

	* gconf/gconftool.c (extract_global_info): add more error
	checking, adding more error strings

	* gconf/gconf-schema.c (gconf_schema_validate): do some more
	validation with error strings that couldn't be added to stable
	branch

	* backends/xml-dir.c: fix quoting in error string

	* backends/xml-backend.c (resolve_address): fix quoting in error
	string

	* backends/markup-tree.c: make it work

	* backends/markup-backend.c: make it work

	* backends/Makefile.am (libgconfbackend_markup_la_SOURCES): add
	markup-backend.c

2002-09-18  Yanko Kaneti <yaneti@declera.com>

	* gconf.m4.in: Introduce --disable-schemas-install and the 
	GCONF_SCHEMAS_INSTALL conditional, which allows disabling 
	the schemas installation given the package decides to support it.

	* doc/Makefile.am:
	* doc/gconf/gconf.sgml:
	* doc/gconf-1.0.dtd (ADDED): formal dtd for the schema files.
	Not yet complete. Installed in $(pkgdatadir)/xml/gconf/ for now.

2002-09-18  Havoc Pennington  <hp@pobox.com>

	* configure.in: bump to 2.1.0, to get in sync with gnome and allow
	identifying HEAD

2002-09-09  jacob berkman  <jacob@ximian.com>

	* gconf/GConf.idl:
	* gconf/GConfX.idl:
	* gconf/Makefile.am:
	* gconf/gconf-database.h:
	* gconf/gconf-internals.h:
	* gconf/gconf.c:
	* gconf/gconfd.c:
	* gconf/gconfd.h: rename GConf.idl to GConfX.idl in order to build
	on non-case-sensitive file systems

2002-09-06  Peteris Krisjanis <peteris.krisjanis@os.lv>

	* configure.in: Added Latvian (lv) to ALL_LINGUAS

2002-08-04  Havoc Pennington  <hp@redhat.com>

	* configure.in: 1.2.1

2002-07-12  Brian Cameron  <Brian.Cameron@sun.com>

	* gconf/gconfd.c
	Removed reference to gnome_segv2 since it was not used.

2002-07-11  Brian Cameron  <Brian.Cameron@sun.com>

	* gconf-2.0.pc.in
	* gconf.spec.in
	* gconf/Makefile.am
	* gconf/gconfd.c
	* gconf/gconf-internals