@@ -1,5 +1,10 @@
 2002-09-18  Havoc Pennington  <hp@pobox.com>
 
+	* backends/markup-backend.c (resolve_address): add FIXME about
+	GCONF_LOCAL_LOCKS
+
+2002-09-18  Havoc Pennington  <hp@pobox.com>
+
         Merge gconf-markup-hacking branch
 	
 	* tests/testbackend.c: add a test for backends
